Feat(MinIO): add management archive
